--- a/artifact_SOCP/requirements.txt
+++ b/artifact_SOCP/requirements.txt
@@ -6,7 +6,7 @@ pandas==1.5.0
 pytorch-lightning==1.7.7
 scikit-learn==1.1.2
 --find-links https://download.pytorch.org/whl/torch_stable.html
-torch==1.12.1+cu116
+torch==1.12.1
 --find-links https://download.pytorch.org/whl/torch_stable.html
 torchaudio==0.12.1
 --find-links https://download.pytorch.org/whl/torch_stable.html
